[gd_scene load_steps=16 format=3 uid="uid://ddp82a7wqk4ab"]

[ext_resource type="Script" path="res://world/check_1_super_man/super_man/egg yolk bullet/egg_yolk_bullet.gd" id="1_4egta"]
[ext_resource type="Texture2D" uid="uid://l6rf743366yv" path="res://world/check_1_super_man/particle bullet/bullet.png" id="2_6ipn6"]
[ext_resource type="Texture2D" uid="uid://dcov3ntn5fpwj" path="res://world/check_1_super_man/particle bullet/particle.png" id="3_6bjmb"]

[sub_resource type="CircleShape2D" id="CircleShape2D_twi1g"]

[sub_resource type="Curve" id="Curve_vqln6"]
_data = [Vector2(0, 0.0525016), 0.0, 0.0, 0, 0, Vector2(0.0918114, 0.920632), 0.584489, 0.584489, 0, 0, Vector2(0.99999, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_3t7wp"]
curve = SubResource("Curve_vqln6")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_nt3nh"]
particle_flag_disable_z = true
spread = 70.0
initial_velocity_min = 70.0
initial_velocity_max = 100.0
gravity = Vector3(2.08165e-12, 98, 2.08165e-12)
damping_min = 20.0
damping_max = 70.0
scale_min = 0.5
scale_max = 0.9
scale_curve = SubResource("CurveTexture_3t7wp")
color = Color(1, 0.980392, 0.811765, 0.737255)
hue_variation_min = -0.1
hue_variation_max = 0.1

[sub_resource type="Curve" id="Curve_ev0ci"]
_data = [Vector2(0, 0.0525016), 0.0, 0.0, 0, 0, Vector2(0.0918114, 0.920632), 0.584489, 0.584489, 0, 0, Vector2(0.99999, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_fl45n"]
curve = SubResource("Curve_ev0ci")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_glas3"]
particle_flag_disable_z = true
spread = 30.0
initial_velocity_min = 50.0
initial_velocity_max = 90.0
gravity = Vector3(0, 98, 0)
scale_min = 0.5
scale_max = 0.9
scale_curve = SubResource("CurveTexture_fl45n")
color = Color(1, 0.980392, 0.811765, 0.737255)
hue_variation_min = -0.1
hue_variation_max = 0.1

[sub_resource type="Animation" id="Animation_88jjg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EmitParticle:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ContactGroundParticle:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, 2)]
}

[sub_resource type="Animation" id="Animation_5bkb8"]
resource_name = "emit"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EmitParticle:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_q3qxn"]
resource_name = "hit"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ContactGroundParticle:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(2, 2), Vector2(1e-05, 1e-05)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_aicfe"]
_data = {
"RESET": SubResource("Animation_88jjg"),
"emit": SubResource("Animation_5bkb8"),
"hit": SubResource("Animation_q3qxn")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_6scdy"]
radius = 11.0

[node name="EggYolkBullet" type="RigidBody2D"]
collision_layer = 32
mass = 0.5
gravity_scale = 0.5
script = ExtResource("1_4egta")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_twi1g")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("2_6ipn6")

[node name="ContactGroundParticle" type="GPUParticles2D" parent="."]
light_mask = 524289
rotation = -1.5708
emitting = false
amount = 24
process_material = SubResource("ParticleProcessMaterial_nt3nh")
texture = ExtResource("3_6bjmb")
lifetime = 0.8
explosiveness = 0.1
randomness = 1.0

[node name="EmitParticle" type="GPUParticles2D" parent="."]
emitting = false
amount = 20
process_material = SubResource("ParticleProcessMaterial_glas3")
texture = ExtResource("3_6bjmb")
lifetime = 0.6
explosiveness = 0.1
randomness = 1.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_aicfe")
}

[node name="DetectArea" type="Area2D" parent="."]
collision_layer = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectArea"]
visible = false
shape = SubResource("CircleShape2D_6scdy")

[connection signal="body_entered" from="DetectArea" to="." method="_on_detect_area_body_entered"]
